# NativeCollections

./: .gitignore  CMakeLists.txt  README.md
Scripts/: ExecuteCommandPlugin.cs  NV12ToRGBAScript.cs  VideoCapPlugin.cs
com.github.am.nativecollections/: package.json
com.github.am.nativecollections/Runtime/: com.github.am.nativecollections.asmdef
com.github.am.nativecollections/Runtime/Scripts/: ExecuteCommandPlugin.cs  MapTouchDisplay.cs  NV12ToRGBAScript.cs  VideoCapPlugin.cs
include/: execute_cmd.h  videocap_plugin.h
src/: execute_cmd.cpp  videocap_plugin.cpp
